new pricing added

--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -1,5 +1,5 @@
 <div
-  class="grid max-w-2xl grid-cols-1 py-4 -mx-4 xl:-mx-12 sm:grid-cols-2 lg:grid-cols-3 gap-y-10 sm:mx-auto lg:max-w-none xl:gap-x-12"
+  class="grid max-w-2xl grid-cols-1 py-4 sm:grid-cols-2 lg:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none xl:gap-x-12 mx-auto"
 >
 
   <!-- <section class="flex flex-col px-6 lg:py-8 rounded-3xl bg-gray-50">
@@ -49,44 +49,48 @@
     >
   </section> -->
   <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-    <h3 class="mt-5 text-lg text-black font-display">Pay as you go, <span class="text-sm font-display  text-gray-600">then $0.15/min </span></h3>
+    <h3 class="mt-5 text-lg text-black font-display">
+      Pay as you go, <span class="text-sm font-display text-gray-600"
+        >then $0.15/min
+      </span>
+    </h3>
     <p class="mt-2 text-sm text-gray-500">
       Good for those trying to get there, but are too far from it.
     </p>
     <p
       class="order-first text-5xl font-light tracking-tight text-black font-display"
     >
-    $0
+      $0
     </p>
     <ul
       role="list"
       class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
     >
-    <li class="flex items-center">
-      <ion-icon
-        class="w-4 h-4 md hydrated"
-        name="checkmark-outline"
-        role="img"
-        aria-label="checkmark outline"></ion-icon><span class="ml-4"
-        >10 min of free access 
-      </span>
-    </li>
-    <li class="flex items-center">
-      <ion-icon
-      class="w-4 h-4 md hydrated"
-      name="checkmark-outline"
-      role="img"
-      aria-label="checkmark outline"></ion-icon><span class="ml-4">
-        20k Knowledge base </span
-        >
+      <li class="flex items-center">
+        <ion-icon
+          class="w-4 h-4 md hydrated"
+          name="checkmark-outline"
+          role="img"
+          aria-label="checkmark outline"></ion-icon><span class="ml-4"
+          >10 min of free access
+        </span>
       </li>
       <li class="flex items-center">
         <ion-icon
-        class="w-4 h-4 md hydrated"
-        name="checkmark-outline"
-        role="img"
-        aria-label="checkmark outline"></ion-icon><span class="ml-4"
-        >10 Free Knowledge Bases</span
+          class="w-4 h-4 md hydrated"
+          name="checkmark-outline"
+          role="img"
+          aria-label="checkmark outline"></ion-icon><span class="ml-4">
+          20k Knowledge base
+        </span>
+      </li>
+      <li class="flex items-center">
+        <ion-icon
+          class="w-4 h-4 md hydrated"
+          name="checkmark-outline"
+          role="img"
+          aria-label="checkmark outline"></ion-icon><span class="ml-4"
+          >10 Free Knowledge Bases</span
         >
       </li>
       <li class="flex items-center">
@@ -95,27 +99,27 @@
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4">
-            Library of tutorials to set it up. 
+          Library of tutorials to set it up.
         </span>
       </li>
       <li class="flex items-center">
         <ion-icon
-        class="w-4 h-4 md hydrated"
-        name="checkmark-outline"
-        role="img"
-        aria-label="checkmark outline"></ion-icon><span class="ml-4"
-        >Chat help
-      </span>
-    </li>
-    <li class="flex items-center">
-      <ion-icon
-        class="w-4 h-4 md hydrated"
-        name="checkmark-outline"
-        role="img"
-        aria-label="checkmark outline"></ion-icon><span class="ml-4"
-        >Dedicated Discord to answer any questions
-      </span>
-    </li>
+          class="w-4 h-4 md hydrated"
+          name="checkmark-outline"
+          role="img"
+          aria-label="checkmark outline"></ion-icon><span class="ml-4"
+          >Chat help
+        </span>
+      </li>
+      <li class="flex items-center">
+        <ion-icon
+          class="w-4 h-4 md hydrated"
+          name="checkmark-outline"
+          role="img"
+          aria-label="checkmark outline"></ion-icon><span class="ml-4"
+          >Dedicated Discord to answer any questions
+        </span>
+      </li>
     </ul>
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
@@ -123,11 +127,11 @@
       href="https://app.callsupport.ai">Get started</a
     >
   </section>
-  <section
+  <!-- <section
     class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:order-none"
   >
-    <h3 class="mt-5 text-lg text-white font-display">Done for you, $99/month   
-      <!-- <span class="text-sm font-display  text-white">99$/ month</span>  -->
+    <h3 class="mt-5 text-lg text-white font-display">
+      Done for you, $99/month
     </h3>
     <p class="mt-2 text-sm text-accent-100">
       Best for growing companies or those who need some help.
@@ -135,7 +139,7 @@
     <p
       class="order-first text-5xl font-light tracking-tight text-white font-display"
     >
-    $99
+      $99
     </p>
     <ul
       role="list"
@@ -161,83 +165,67 @@
       </li>
       <li class="flex items-center">
         <ion-icon
-        class="w-4 h-4 md hydrated"
-        name="checkmark-outline"
-        role="img"
-        aria-label="checkmark outline"></ion-icon><span class="ml-4"
-        >10 Free Knowledge Bases
-      </span>
-    </li>
-    <li class="flex items-center">
-      <ion-icon
-      class="w-4 h-4 md hydrated"
-      name="checkmark-outline"
-      role="img"
-      aria-label="checkmark outline"></ion-icon><span class="ml-4"
-      >Priority support
-    </span>
-  </li>
-  <li class="flex items-center">
-    <ion-icon
-      class="w-8 h-8 md hydrated"
-      name="checkmark-outline"
-      role="img"
-      aria-label="checkmark outline"></ion-icon><span class="ml-4 text-sm"
-      > Help setting up integrations with CRM or any existing tools
-    </span>
-  </li>
-      <!-- <li class="flex items-center">
-        <ion-icon
           class="w-4 h-4 md hydrated"
           name="checkmark-outline"
           role="img"
-          aria-label="checkmark outline"></ion-icon><span class="ml-4">
-          Set up for you</span
-        >
-      </li> -->
-      <!-- <li class="flex items-center">
+          aria-label="checkmark outline"></ion-icon><span class="ml-4"
+          >10 Free Knowledge Bases
+        </span>
+      </li>
+      <li class="flex items-center">
         <ion-icon
           class="w-4 h-4 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
-          >Analytics
+          >Priority support
         </span>
-      </li> -->
+      </li>
+      <li class="flex items-center">
+        <ion-icon
+          class="w-8 h-8 md hydrated"
+          name="checkmark-outline"
+          role="img"
+          aria-label="checkmark outline"></ion-icon><span class="ml-4 text-sm">
+          Help setting up integrations with CRM or any existing tools
+        </span>
+      </li>
     </ul>
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
       aria-label="Indie hacker tier"
-      href="https://cal.com/callsupport/30min" target="_blank" rel="noopener noreferrer">Book a Call</a
+      href="https://cal.com/callsupport/30min"
+      target="_blank"
+      rel="noopener noreferrer">Book a Call</a
     >
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-2 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
       aria-label="Indie hacker tier"
       href="https://app.callsupport.ai">Get started</a
     >
-  </section>
-  <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-    <h3 class="mt-5 text-lg text-black font-display">
+  </section> -->
+  <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-black">
+    <h3 class="mt-5 text-lg text-white font-display">
       Enterprise
       <!-- <span class="text-sm font-display  text-gray-600">
           then $0.08-0.13/min
       </span> -->
-  </h3>
-    <p class="mt-2 text-sm text-gray-500">
+    </h3>
+    <p class="mt-2 text-sm text-white">
       For teams, needing top performance.
     </p>
     <p
-      class="order-first text-5xl font-light tracking-tight text-black font-display"
+      class="order-first text-5xl font-light tracking-tight text-white font-display"
     >
-    Enterprise
+      Enterprise
     </p>
     <ul
       role="list"
-      class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
+      class="flex flex-col order-last mt-10 text-sm text-white gap-y-3"
     >
       <li class="flex items-center">
         <ion-icon
-          class="w-5 h-5 md hydrated"
+          class="w-6 h-5 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
@@ -246,16 +234,16 @@
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-8 h-8 md hydrated"
+          class="w-6 h-5 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4">
-            Discounted pricing based on volumes. (as low as $0.10 per minute)
+          Discounted pricing based on volumes. (as low as $0.10 per minute)
         </span>
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-5 h-5 md hydrated"
+          class="w-6 h-5 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4"
@@ -273,20 +261,20 @@
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-8 h-8 md hydrated"
+          class="w-6 h-5 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4">
-            Premium private Slack channel support with dedicated support teams.</span
+          Premium private Slack channel support with dedicated support teams.</span
         >
       </li>
       <li class="flex items-center">
         <ion-icon
-          class="w-5 h-6 md hydrated"
+          class="w-6 h-6 md hydrated"
           name="checkmark-outline"
           role="img"
           aria-label="checkmark outline"></ion-icon><span class="ml-4">
-            Fully Compliant (GDPR, HIPAA), Uptime SLA</span
+          Fully Compliant (GDPR, HIPAA), Uptime SLA</span
         >
       </li>
     </ul>
@@ -297,7 +285,7 @@
       target="_blank"
       rel="noopener noreferrer"
     >
-    Book a Call
+      Book a Call
     </a>
   </section>
 </div>
