--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -15,7 +15,7 @@ import Annual from "./components/annual.astro";
 
     <!-- Toggle Buttons -->
     <div class="flex justify-start mt-8 gap-1">
-      <button
+      <!-- <button
         id="monthly-button"
         class=""
       >
@@ -26,7 +26,7 @@ import Annual from "./components/annual.astro";
         class="px-6 py-3 ml-4 text-sm font-medium rounded-lg bg-gray-400   cursor-pointer text-black relative overflow-hidden"
       >
         <span class="shining-text">Annual (Save Upto 50%)</span>
-      </button>
+      </button> -->
     </div>
 
     <!-- Plan Display -->
