new pricing added

--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,8 +1,13 @@
 <section id="features">
-  <section class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12 ">
+  <section class=" hidden md:block mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12 ">
    
  
     <img src="/images/compressed/Integration image-min.png" alt="Integration" />
+  </section>
+  <section class=" md:hidden mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12 ">
+   
+ 
+    <img src="/images/compressed/Integration image for phone.png" alt="Integration" />
   </section>
   <div
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
