--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -48,7 +48,7 @@
       href="https://app.callsupport.ai">Get started</a
     >
   </section> -->
-  <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
+  <section class="flex flex-col px-6 py-6 rounded-3xl lg:py-8 bg-gray-50">
     <h3 class="mt-5 text-lg text-black font-display">
       Pay as you go, <span class="text-sm font-display text-gray-600"
         >then $0.15/min
@@ -204,7 +204,7 @@
       href="https://app.callsupport.ai">Get started</a
     >
   </section> -->
-  <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-black">
+  <section class="flex flex-col px-6 py-6 rounded-3xl lg:py-8 bg-black">
     <h3 class="mt-5 text-lg text-white font-display">
       Enterprise
       <!-- <span class="text-sm font-display  text-gray-600">
