--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Cta from "../components/global/Cta.astro";
   <meta property="og:description" content="Automate all your phone calls with AI" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://callsupport.ai" />
-  <meta property="og:image" content="https://callsupport.ai/images/hero-banner.jpg" />
+  <meta property="og:image" content="https://callsupport.ai/images/2.png" />
 </head>
 <BaseLayout>
 
