--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -366,6 +366,13 @@
     image: "/images/Blogs/blog45.jpeg",
     link: "/Top-5-AI-Answering-Service-Features-Your-Business-Needs",
   },
+  {
+    id: 46,
+    title: "Boosting Lead Generation with AI Answering Services",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog46.jpeg",
+    link: "/Boosting-Lead-Generation-with-AI-Answering-Services",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
