voho theme added

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,19 +18,19 @@ import "../styles/global.css";
 <link
   rel="apple-touch-icon"
   sizes="180x180"
-  href="/images/favicons/apple-touch-icon.png"
+  href="/vohofavicon/180.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="/images/favicons/favicon-32x32.png"
+  href="/vohofavicon/32x32/1.png"
 />
 <link
   rel="icon"
   type="image/png"
-  sizes="16x16"
-  href="/images/favicons/favicon-16x16.png"
+    sizes="16x16"
+    href="/vohofavicon/20x20/1.png"
 />
 <link rel="manifest" href="/images/favicons/site.webmanifest" />
 <link
