--- a/src/components/infopages/Affiliate.astro
+++ b/src/components/infopages/Affiliate.astro
@@ -66,10 +66,10 @@
           <p
             class="text-3xl font-normal tracking-tight text-black font-display"
           >
-            Become an Affiliate with CallSupport
+            Become an Affiliate with Voho
           </p>
           <p class="text-base mt-4 text-zinc-500">
-            Earn 20% commission by recommending CallSupport's services to others.
+            Earn 20% commission by recommending Voho's services to others.
           </p>
         </div>
       </div>
@@ -121,7 +121,7 @@
             @click="setActiveAccordion(id)"
             class="flex items-center justify-between w-full p-4 pb-1 text-left font-medium select-none"
           >
-            <span>How do I join the CallSupport Affiliate Program?</span>
+            <span>How do I join the Voho Affiliate Program?</span>
             <svg
               class="w-5 h-5 duration-300 ease-out text-accent-500"
               :class="{ '-rotate-[45deg]': activeAccordion==id }"
@@ -138,7 +138,7 @@
           </button>
           <div x-show="activeAccordion==id" x-collapse="">
             <div class="p-4 pt-2 text-zinc-500">
-              You can easily sign up via our affiliate portal and start promoting CallSupport immediately.
+              You can easily sign up via our affiliate portal and start promoting Voho immediately.
             </div>
           </div>
         </div>
@@ -168,7 +168,7 @@
           </button>
           <div x-show="activeAccordion==id" x-collapse="">
             <div class="p-4 pt-2 text-zinc-500">
-              No, there are no fees associated with joining the CallSupport Affiliate Program.
+              No, there are no fees associated with joining the Voho Affiliate Program.
             </div>
           </div>
         </div>
@@ -288,7 +288,7 @@
           </button>
           <div x-show="activeAccordion==id" x-collapse="">
             <div class="p-4 pt-2 text-zinc-500">
-              Yes, all affiliates must adhere to CallSupport’s promotional guidelines. This includes not impersonating CallSupport or engaging in deceptive marketing practices.
+              Yes, all affiliates must adhere to Voho promotional guidelines. This includes not impersonating Voho or engaging in deceptive marketing practices.
             </div>
           </div>
         </div>
