--- a/src/components/infopages/Privacy.astro
+++ b/src/components/infopages/Privacy.astro
@@ -13,7 +13,7 @@
     <div>
       <div class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
         <p>
-          This privacy policy sets out how CallSupport collects, processes, and uses your Personal Information through your use of our Services.
+          This privacy policy sets out how Voho collects, processes, and uses your Personal Information through your use of our Services.
         </p>
         <h3>Definitions</h3>
         <h3>DPO</h3>
@@ -24,7 +24,7 @@
           Personal Information means any identifying information about you. This includes, but is not limited to, cookies and usage data.
         </p>
         <p>
-          Services mean all services provided by CallSupport to you, including (but not limited to) this Website.
+          Services mean all services provided by Voho to you, including (but not limited to) this Website.
         </p>
         <p>
           Website means this website and all websites, applications, and communications that post a link to this Privacy Policy.
@@ -63,7 +63,7 @@
         </p>
         <h3>Third Party Links</h3>
         <p>
-          Our website contains links to other third-party websites not owned or managed by CallSupport. This privacy policy applies to this website only. If you click a link to a third-party website, the privacy policy of that website will apply. We highly recommend that you read the privacy policies of other websites as they may be different from ours.
+          Our website contains links to other third-party websites not owned or managed by Voho. This privacy policy applies to this website only. If you click a link to a third-party website, the privacy policy of that website will apply. We highly recommend that you read the privacy policies of other websites as they may be different from ours.
         </p>
         <h3>Payment Vendors</h3>
         <p>
@@ -83,11 +83,11 @@
         </p>
         <h3>Contact Us</h3>
         <p>
-          If you have any questions or suggestions about our privacy policy or want to know more information about the Personal Information we hold, please contact us at founders@callsupport.ai.
+          If you have any questions or suggestions about our privacy policy or want to know more information about the Personal Information we hold, please contact us at founders@voho.ai.
         </p>
         <h3>Complaints</h3>
         <p>
-          If you believe that we have breached our obligations to you under this privacy policy or relevant privacy laws, please contact us at <a href="mailto:founders@callsupport.ai">founders@callsupport.ai</a>. If you are not satisfied with our response, you have the right to lodge a complaint at any time to your relevant authority.
+          If you believe that we have breached our obligations to you under this privacy policy or relevant privacy laws, please contact us at <a href="mailto:founders@callsupport.ai">founders@voho.ai</a>. If you are not satisfied with our response, you have the right to lodge a complaint at any time to your relevant authority.
         </p>
       </div>
     </div>
