--- a/src/components/infopages/products/components/discover.astro
+++ b/src/components/infopages/products/components/discover.astro
@@ -3,7 +3,7 @@
       <h2
         class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mb-8"
       >
-        Discover What Businesses Are Building with CallSupport
+        Discover What Businesses Are Building with Voho
       </h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <!-- Card 1 -->
