--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -18,7 +18,7 @@
         <p
           class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display"
         >
-          What are business building with Call Support
+          What are business building with Voho
         </p><p
           class="mt-4 text-lg text-na mx-auto tracking-tight text-gray-500"
         >
