--- a/src/pages/ecommerce.astro
+++ b/src/pages/ecommerce.astro
@@ -4,7 +4,7 @@ import Ecommerce from "../components/infopages/usecase/Ecommerce.astro";
 
 ---
 <head>
-  <title>AI Phone Agents for Ecommerce Stores Online - CallSupport</title>
+  <title>AI Phone Agents for Ecommerce Stores Online - Voho</title>
    <meta name="description" content=" AI Phone Agents for Ecommerce Stores. Boost sales, improve customer service, and automate your phone operations 24/7." />
 </head>
 
