--- a/src/pages/health.astro
+++ b/src/pages/health.astro
@@ -5,7 +5,7 @@ import Health from "../components/infopages/usecase/Health.astro";
 ---
 
 <head>
-  <title>AI Phone Agents for Health Care Industry - CallSupport  </title>
+  <title>AI Phone Agents for Health Care Industry - Voho  </title>
    <meta name="description" content="AI Phone Agents for Healthcare. Improve patient experience, streamline appointments, and reduce wait times with AI-powered phone calls." />
 </head>
 
