--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,13 +10,13 @@ import Cta from "../components/global/Cta.astro";
 <head>
   <title>24/7 AI Receptionist - AI Answering Service & AI Outbound calls for Businesses  </title>
   <meta name="description" content="Boost your business with AI-powered answering & outbound calls. Never miss a lead or opportunity again." />
-  <meta name="keywords" content="customer support, communication, support software, Callsupport.ai" />
-  <meta name="author" content="Callsupport.ai Team" />
-  <meta property="og:title" content="Callsupport.ai" />
+  <meta name="keywords" content="customer support, communication, support software, Voho.ai" />
+  <meta name="author" content="Voho.ai Team" />
+  <meta property="og:title" content="Voho.ai" />
   <meta property="og:description" content="Automate all your phone calls with AI" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://callsupport.ai" />
-  <meta property="og:image" content="https://callsupport.ai/images/2.png" />
+  <meta property="og:url" content="https://voho.ai" />
+  <meta property="og:image" content="https://voho.ai/images/2.png" />
 </head>
 <BaseLayout>
 
