--- a/src/pages/recruitment.astro
+++ b/src/pages/recruitment.astro
@@ -5,7 +5,7 @@ import Recrutiment from "../components/infopages/usecase/Recrutiment.astro";
 ---
 
 <head>
-  <title>AI Phone Agents for Recruitment Processes - CallSupport  </title>
+  <title>AI Phone Agents for Recruitment Processes - Voho  </title>
    <meta name="description" content="AI Phone Agents for Recruitment. Automate candidate screening, scheduling, and outreach with AI-powered phone calls." />
 </head>
 
