--- a/src/pages/restaurant.astro
+++ b/src/pages/restaurant.astro
@@ -5,7 +5,7 @@ import Restaurant from "../components/infopages/usecase/Restaurant.astro";
 ---
 
 <head>
-  <title>Get best AI Phone Agents for Restaurants - CallSupport  </title>
+  <title>Get best AI Phone Agents for Restaurants - Voho  </title>
    <meta name="description" content="Get the best AI Phone Agents for Restaurants. Automate your phone calls, improve customer service, and boost sales." />
 </head>
 
