--- a/src/components/Forms/Login.astro
+++ b/src/components/Forms/Login.astro
@@ -13,7 +13,7 @@
             <h2
               class="font-medium leading-tight text-black text-xl font-display"
             >
-              Log in to CallSupport
+              Log in to Voho
             </h2><div class="py-3">
               <span class="w-full inline-flex relative mt-3 z-0"
                 ><button
