--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -9,7 +9,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30">
             <!-- SVG Content -->
           </svg>
-          <span class="font-bold font-display">CallSupport</span>
+          <span class="font-bold font-display text-2xl">Voho</span>
         </a>
         <button
           id="mobileMenuToggle"
