--- a/src/components/infopages/Terms.astro
+++ b/src/components/infopages/Terms.astro
@@ -13,15 +13,15 @@
     <div>
       <div class="mx-auto max-w-[40rem] prose-base prose text-gray-500 prose-h3:text-black prose-a:font-semibold prose-a:text-accent-300 hover:prose-a:text-black">
         <p>
-          These terms and conditions set out how CallSupport provides, processes, and manages your use of our Services.
+          These terms and conditions set out how Voho provides, processes, and manages your use of our Services.
         </p>
         <h3>Definitions</h3>
         <p>
-          "We," "us," or "our" refer to CallSupport. "You" refers to the individual or entity accessing our Services.
+          "We," "us," or "our" refer to Voho. "You" refers to the individual or entity accessing our Services.
         </p>
         <h3>Services</h3>
         <p>
-          Services refer to the solutions offered by CallSupport, including (but not limited to) phone support and all features provided through our website.
+          Services refer to the solutions offered by Voho, including (but not limited to) phone support and all features provided through our website.
         </p>
         <h3>Acceptance of Terms</h3>
         <p>
@@ -53,15 +53,15 @@
         </p>
         <h3>Intellectual Property</h3>
         <p>
-          All content provided through our Services, including text, graphics, logos, and software, is the intellectual property of CallSupport. You may not reproduce, modify, or distribute any material without prior written consent.
+          All content provided through our Services, including text, graphics, logos, and software, is the intellectual property of Voho. You may not reproduce, modify, or distribute any material without prior written consent.
         </p>
         <h3>Limitation of Liability</h3>
         <p>
-          To the extent permitted by law, CallSupport will not be liable for any damages arising out of your use of our Services.
+          To the extent permitted by law, Voho will not be liable for any damages arising out of your use of our Services.
         </p>
         <h3>Indemnification</h3>
         <p>
-          You agree to indemnify and hold CallSupport harmless from any claims, damages, or expenses arising from your use of the Services or violation of these terms.
+          You agree to indemnify and hold Voho harmless from any claims, damages, or expenses arising from your use of the Services or violation of these terms.
         </p>
         <h3>Governing Law</h3>
         <p>
@@ -81,7 +81,7 @@
         </p>
         <h3>Contact Us</h3>
         <p>
-          If you have any questions about these terms and conditions, please contact us at founders@callsupport.ai.
+          If you have any questions about these terms and conditions, please contact us at founders@voho.ai.
         </p>
       </div>
     </div>
