--- a/src/components/infopages/usecase/Restaurant.astro
+++ b/src/components/infopages/usecase/Restaurant.astro
@@ -75,7 +75,7 @@ import CallForm from '../../Forms/CallForm.astro'
         <p
           class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
         >
-        What are business building with Call Support
+        What are business building with Voho
         </p><p
           class="mt-4 text-lg text-na mx-auto tracking-tight text-gray-500"
         >
