--- a/src/pages/estate.astro
+++ b/src/pages/estate.astro
@@ -4,7 +4,7 @@ import RealEstate from "../components/infopages/usecase/RealEstate.astro";
 
 ---
 <head>
-  <title>AI Phone Agents for Real Estate Industry - CallSupport</title>
+  <title>AI Phone Agents for Real Estate Industry - Voho</title>
    <meta name="description" content="AI Phone Agents for Real Estate. Automate lead generation, property showings, and customer support with AI-powered phone calls." />
 </head>
 
