--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -77,7 +77,7 @@
             </li> -->
             <li>
               <a
-                href="https://app.callsupport.ai"
+                href="https://app.vohoai.com"
                 class="hover:text-black">
                 Sign In
               </a>
@@ -109,7 +109,7 @@
             role="list"
             class="mt-4 space-y-1">
             <li>
-              founders@vohoai.ai
+              founders@vohoai.com
             </li>
           </ul>
         </div>
