--- a/src/components/infopages/Enterprise.astro
+++ b/src/components/infopages/Enterprise.astro
@@ -50,7 +50,7 @@
     <!-- Right Section -->
     <div class="rounded-3xl bg-gray-50 p-8 shadow-md">
       <form
-        action="https://api.callsupport.ai/api/enterpriseUser/"
+        action="https://api.vohoai.com/api/enterpriseUser/"
         method="POST"
         class="space-y-4"
         id="submissionForm"
