--- a/src/components/infopages/Privacy.astro
+++ b/src/components/infopages/Privacy.astro
@@ -87,7 +87,7 @@
         </p>
         <h3>Complaints</h3>
         <p>
-          If you believe that we have breached our obligations to you under this privacy policy or relevant privacy laws, please contact us at <a href="mailto:founders@callsupport.ai">founders@voho.ai</a>. If you are not satisfied with our response, you have the right to lodge a complaint at any time to your relevant authority.
+          If you believe that we have breached our obligations to you under this privacy policy or relevant privacy laws, please contact us at <a href="mailto:founders@vohoai.com">founders@vohoai.com</a>. If you are not satisfied with our response, you have the right to lodge a complaint at any time to your relevant authority.
         </p>
       </div>
     </div>
