--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -13,7 +13,7 @@ import AllVoices from "../global/AllVoices.jsx";
           class="relative rounded-full py-1 px-3 mb-4 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20"
         >
           <a
-            href="https://app.callsupport.ai/"
+            href="https://app.vohoai.com/"
             class="font-semibold text-accent-600"
             ><span class="absolute inset-0" aria-hidden="true"></span>
             <span class="block lg:inline">
@@ -84,7 +84,7 @@ import AllVoices from "../global/AllVoices.jsx";
       >
       <a
         class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-        href="https://app.callsupport.ai/"
+        href="https://app.vohoai.com/"
         >Create free account now &nbsp; &rarr;
       </a>
     </div>
