--- a/src/components/landing/components/annual.astro
+++ b/src/components/landing/components/annual.astro
@@ -119,7 +119,7 @@
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
       aria-label="Wannabe tier"
-      href="https://app.callsupport.ai">Get started</a
+      href="https://app.vohoai.com">Get started</a
     >
   </section>
   <section
@@ -212,7 +212,7 @@
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-2 text-center text-black transition duration-200 ease-in-out transform bg-white border-2 border-white hover:bg-transparent hover:border-white rounded-xl hover:text-white focus:outline-none"
       aria-label="Indie hacker tier"
-      href="https://app.callsupport.ai">Get started</a
+      href="https://app.vohoai.com">Get started</a
     >
   </section>
   <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
