--- a/src/components/infopages/Affiliate.astro
+++ b/src/components/infopages/Affiliate.astro
@@ -7,7 +7,7 @@
         <div
           class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
           <a
-            href="https://app.callsupport.ai/"
+            href="https://app.vohoai.com/"
             class="font-semibold text-accent-600"
             ><span class="absolute inset-0" aria-hidden="true"></span>
             <span class="block lg:inline">
