--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -124,7 +124,7 @@
     <a
       class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
       aria-label="Wannabe tier"
-      href="https://app.callsupport.ai">Get started</a
+      href="https://app.vohoai.com">Get started</a
     >
   </section>
   <!-- <section
