--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -51,7 +51,7 @@
   <section class="flex flex-col px-6 py-6 rounded-3xl lg:py-8 bg-gray-50">
     <h3 class="mt-5 text-lg text-black font-display">
       Pay as you go, <span class="text-sm font-display text-gray-600"
-        >then $0.15/min
+        >then $0.15/min - $1/min
       </span>
     </h3>
     <p class="mt-2 text-sm text-gray-500">
@@ -60,7 +60,7 @@
     <p
       class="order-first text-5xl font-light tracking-tight text-black font-display"
     >
-      $0
+     Stater
     </p>
     <ul
       role="list"
