--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -60,7 +60,7 @@
     <p
       class="order-first text-5xl font-light tracking-tight text-black font-display"
     >
-     Stater
+     Starter
     </p>
     <ul
       role="list"
