--- a/src/pages/demo.astro
+++ b/src/pages/demo.astro
@@ -1,13 +1,12 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Demo from "../components/infopages/Demo.astro";
-
+import Phone from "../components/vapi/Phone.astro";
 ---
 <head>
   <title>Demo  </title>
 </head>
 <BaseLayout>
 
-  <Demo  />
+      <Phone />
 
 </BaseLayout>
