--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -19,7 +19,7 @@
         <div class="max-w-lg mx-auto lg:mx-0 lg:pr-12">
           <div class="flex flex-wrap">
             <div class="flex items-center text-sm font-medium text-black">
-              <svg
+              <!-- <svg
                 class="flex-none w-4 h-4 stroke-current"
                 stroke-width="1.5"
                 stroke-linecap="round"
@@ -40,10 +40,11 @@
                   fill="#d94dd1"
                   stroke="#d94dd1"
                 ></path></svg
-              ><span class="ml-2.5"> AI Receptionist </span>
+              > -->
+              <span class="ml-2.5"> AI Receptionist </span>
             </div>
             <div class="flex items-center ml-6 text-sm font-medium text-black">
-              <svg
+              <!-- <svg
                 viewBox="0 0 256 154"
                 aria-label="Tailwind CSS"
                 class="flex-none w-4 h-4 stroke-current"
@@ -54,12 +55,13 @@
                   fill="#38bdf9"
                   d="M128 0C93.867 0 72.533 17.067 64 51.2 76.8 34.133 91.733 27.733 108.8 32c9.737 2.434 16.697 9.499 24.401 17.318C145.751 62.057 160.275 76.8 192 76.8c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C174.249 14.743 159.725 0 128 0zM64 76.8C29.867 76.8 8.533 93.867 0 128c12.8-17.067 27.733-23.467 44.8-19.2 9.737 2.434 16.697 9.499 24.401 17.318C81.751 138.857 96.275 153.6 128 153.6c34.133 0 55.467-17.067 64-51.2-12.8 17.067-27.733 23.467-44.8 19.2-9.737-2.434-16.697-9.499-24.401-17.318C110.249 91.543 95.725 76.8 64 76.8z"
                 ></path></svg
-              ><span class="ml-2.5"> 24/7 AI Answering</span>
+              > -->
+              <span class="ml-2.5"> 24/7 AI Answering</span>
             </div>
           </div>
           <p
             class="mt-12 text-3xl font-black tracking-tight text-black uppercase font-display">
-            Call Support - AI Voice Agents
+            VOHO - AI Voice Agents
           </p>
           <p
             class="max-w-2xl mt-4 text-base font-medium tracking-tight text-black">
