--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,7 +31,7 @@
 }
 
 .phone {
-  @apply relative bg-gray-900 w-72 h-[545px] rounded-3xl border-4 border-[#fe914b] shadow-lg flex flex-col items-center justify-center;
+  @apply relative bg-gray-900 w-72 h-[545px] rounded-3xl border-4 border-[#283CFF] shadow-lg flex flex-col items-center justify-center;
 }
 .slide-btn {
   @apply relative w-64 h-14 rounded-full flex items-center justify-center text-white font-bold overflow-hidden;
