--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,3 +52,7 @@
 .call-end-btn {
   @apply bg-red-500 text-white px-4 py-2 rounded-md;
 }
+.selected-voice {
+  @apply text-[#283CFF] text-lg font-semibold mt-2;
+}
+
